# Ty-Tetris-v2

./: README.md
Ty-Tetris-v2-Thesis/: .gitignore  CMake-Setup-LinuxAndMac.sh  CMake-Setup-Windows.bat  CMakeLists.txt  LICENSE  Premake-Linux.sh  README.md  premake5.lua
Ty-Tetris-v2-Thesis/dependencies/: glad.lua  glfw.lua  glm.lua  imgui.lua
Ty-Tetris-v2-Thesis/dependencies/GLAD/include/glad/: glad.h
Ty-Tetris-v2-Thesis/dependencies/GLAD/src/: glad.c
Ty-Tetris-v2-Thesis/dependencies/GLM/: copying.txt
Ty-Tetris-v2-Thesis/labs/: Упражнение-2.txt  Упражнение-3.txt  Упражнение-4.txt
Ty-Tetris-v2-Thesis/lib/: CMakeLists.txt
Ty-Tetris-v2-Thesis/lib/imgui/backends/: imgui_impl_opengl3.cpp
Ty-Tetris-v2-Thesis/premake/: LICENSE.txt
Ty-Tetris-v2-Thesis/resources/shaders/: basic_v.glsl  fragment.glsl  phong_f.glsl  phong_v.glsl  tex_f.glsl  tex_v.glsl  vertex.glsl
Ty-Tetris-v2-Thesis/src/: CMakeLists.txt  main.cpp  structs.cpp  structs.h  ui.cpp  ui.h
Ty-Tetris-v2-Thesis/src/app/: main.cpp
Ty-Tetris-v2-Thesis/src/engine/: Audio.cpp  Audio.h  DB.cpp  DB.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Ty-Tetris-v2-Thesis/src/game/: Tetris.cpp  Tetris.h  UI.cpp  UI.h
Ty-Tetris-v2-Thesis/src/tetris/: main.cpp
